@@ -222,7 +222,7 @@ Makefile
 gconf.spec
 gconf/Makefile
 gconf/default.path
-gconf/gconfd.oafinfo
+gconf/gconfd.server
 backends/Makefile
 po/Makefile.in
 doc/Makefile
