@@ -11,7 +11,7 @@ GConf.h
 gconftool
 gconfd
 default.path
-gconfd.oafinfo
+gconfd.server
 gconfd-2
 gconftool-2
 gconfmarshal.h
