@@ -1,0 +1,5 @@
+<oaf_server iid="OAFIID:gconfd:19991118" type="exe" location="gconfd-@MAJOR_VERSION@">
+<oaf_attribute name="repo_ids" type="stringv">
+<item value="IDL:ConfigServer:1.0"/>
+</oaf_attribute>
+</oaf_server>
