@@ -1,3 +1,10 @@
+2001-08-03  Martin Baulig  <baulig@suse.de>
+
+	* gconf/gconfd.oafinfo.in: Renamed -> gconfd.server.in.
+
+	* Makefile.am: Install gconfd.server into the correct dir
+	for bonobo-activation.
+
 2001-08-03  Abel Cheung <maddog@linux.org.hk>
 
 	* configure.in: Added "zh_CN.GB2312" to ALL_LINGUAS.
